<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.pokelist.PokeListFragment">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/toolbar_text"
                android:fontFamily="@font/lemonmilk"
                android:paddingTop="12dp"
                android:textColor="@color/purple_700"
                android:textSize="35sp"/>

            <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/previous_button"
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                    android:text="@string/previous"
                    />

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                    android:text="@string/next"/>


            </LinearLayout>

            <TextView
                android:id="@+id/poke_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ff0000" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:padding="10dp"
                    >

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                    <include layout="@layout/poke_item_shimmer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:layout_gravity="fill" />

                </GridLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/poke_RV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:padding="10dp"
                app:spanCount="2" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
